fix: max width
- The maximum width of the contents up to 980px.
  Because text runs too far when displayed on a large screen.

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ section {
   padding: 110px 110px;
 }
 
+section div.container {
+  max-width: 980px;
+}
+
 section.announcement {
   background: #FAFAFA;
 }
@@ -100,6 +104,7 @@ section.footer {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  max-width: 980px;
 }
 
 section.footer div.left {
